# 3d_reconstruction

./: README.md
point2mesh/: CMakeLists.txt  point2mesh.cpp
sgbm/: CMakeLists.txt  sgbm.cpp  test_pcl.cpp
stereorectify/: mingling.txt  rectify_image.cpp  rectify_image.out  test.cpp  test.out
